--- a/src/frontend/src/index.scss
+++ b/src/frontend/src/index.scss
@@ -49,14 +49,48 @@ a {
 
 .container {
     display: none;
+    color: white;
     font-family: poppins_regular;
     width: 100%;
-    height: fit-content;
+    height: 100vh;
 
-    // .hidden {
-    //     display: none;
-    // }
+    .hidden {
+        display: none;
+    }
+}
+
+@keyframes loader {
+    from {
+        transform: rotate(0);
+    }
+    to {
+        transform: rotate(1turn);
+    }
 }
 
 .loader {
+    animation: loader 1.5s cubic-bezier(0.77, 0, 0.175, 1) reverse infinite;
+}
+
+.update-checker {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    user-select: none;
+    pointer-events: none;
+    gap: 50px;
+
+    .loader {
+        $size: 115px;
+
+        width: $size;
+        height: $size;
+    }
+
+    .message {
+        font-size: 17.5px;
+        transition: color 0.15s ease-in-out;
+    }
 }
